--- a/src/Makefile
+++ b/src/Makefile
@@ -4,9 +4,9 @@ SERIAL = serial
 OPENMAP = OpenMp
 BIN = bin
 OBJ = obj
-CFLAGS =  -std=c++11 -fvisibility=hidden -lpthread -O3 -fopenmp -fexceptions
+CFLAGS = -std=c++11 -fvisibility=hidden -lpthread -O3 -fopenmp -fexceptions
 
-all: $(SIMPLE) $(SERIAL) $(OPENMPFLOYD) $(OPENMP2)
+all: $(SIMPLE) $(SERIAL) $(OPENMPFLOYD) $(OPENMP2)  
 
 $(SIMPLE) : $(OBJ)/vanila_vertex_cover.o 
     $(CC) $(CFLAGS) $(OBJ)/vanila_vertex_cover.o -o $(BIN)/$(SERIAL)
@@ -15,7 +15,7 @@ $(SERIAL) : $(OBJ)/serial_vertex_cover.o
     $(CC) $(CFLAGS) $(OBJ)/serial_vertex_cover.o -o $(BIN)/$(SERIAL)
 
 $(OPENMAP) : $(OBJ)/openmp_vertex_cover.o 
-    $(CC) $(CFLAGS) $(OBJ)/openmp_serial_vertex_cover.o -o $(BIN)/$(OPENMAP)
+    $(CC) $(CFLAGS) $(OBJ)/parallel_vertex_cover.o -o $(BIN)/$(OPENMAP)
 
 $(OBJ)/vanila_vertex_cover.o : ./vanila_vertex_cover.cpp ./vanila_vertex_cover.h
     $(CC) $(CFLAGS) -c ./vanila_vertex_cover.cpp -o $(OBJ)/vanila_vertex_cover.o
@@ -23,8 +23,8 @@ $(OBJ)/vanila_vertex_cover.o : ./vanila_vertex_cover.cpp ./vanila_vertex_cover.h
 $(OBJ)/serial_vertex_cover.o : ./serial_vertex_cover.cpp ./serial_vertex_cover.h
     $(CC) $(CFLAGS) -c ./serial_vertex_cover.cpp -o $(OBJ)/serial_vertex_cover.o
 
-$(OBJ)/openmp_serial_vertex_cover.o : ./openmp_serial_vertex_cover.cpp ./openmp_serial_vertex_cover.h
-    $(CC) $(CFLAGS) -c ./serial_vertex_cover.cpp -o $(OBJ)/serial_vertex_cover.o
+$(OBJ)/parallel_vertex_cover.o : ./parallel_vertex_cover.cpp ./parallel_vertex_cover.h
+    $(CC) $(CFLAGS) -c ./parallel_vertex_cover.cpp -o $(OBJ)/parallel_vertex_cover.o
 
 clean:
     rm -f $(BIN)/*
