--- a/src/Makefile
+++ b/src/Makefile
@@ -4,27 +4,27 @@ SERIAL = serial
 OPENMAP = OpenMp
 BIN = bin
 OBJ = obj
-CFLAGS = -std=c++11 -fvisibility=hidden -O3
+CFLAGS = -std=c++11 
 
-all: $(SIMPLE) $(SERIAL) $(OPENMPFLOYD) $(OPENMP2)  
+all: $(SIMPLE) 
 
 $(SIMPLE) : $(OBJ)/vanila_vertex_cover.o 
 	$(CC) $(CFLAGS) $(OBJ)/vanila_vertex_cover.o -o $(BIN)/$(SERIAL)
 
-$(SERIAL) : $(OBJ)/serial_vertex_cover.o 
-	$(CC) $(CFLAGS) $(OBJ)/serial_vertex_cover.o -o $(BIN)/$(SERIAL)
+# $(SERIAL) : $(OBJ)/serial_vertex_cover.o 
+# 	$(CC) $(CFLAGS) $(OBJ)/serial_vertex_cover.o -o $(BIN)/$(SERIAL)
 
-$(OPENMAP) : $(OBJ)/parallel_vertex_cover.o 
-	$(CC) $(CFLAGS) $(OBJ)/parallel_vertex_cover.o -o $(BIN)/$(OPENMAP)
+# $(OPENMAP) : $(OBJ)/parallel_vertex_cover.o 
+# 	$(CC) $(CFLAGS) $(OBJ)/parallel_vertex_cover.o -o $(BIN)/$(OPENMAP)
 
 $(OBJ)/vanila_vertex_cover.o : ./vanila_vertex_cover.cpp ./vanila_vertex_cover.h
 	$(CC) $(CFLAGS) -c ./vanila_vertex_cover.cpp -o $(OBJ)/vanila_vertex_cover.o
 
-$(OBJ)/serial_vertex_cover.o : ./serial_vertex_cover.cpp ./serial_vertex_cover.h
-	$(CC) $(CFLAGS) -c ./serial_vertex_cover.cpp -o $(OBJ)/serial_vertex_cover.o
+# $(OBJ)/serial_vertex_cover.o : ./serial_vertex_cover.cpp ./serial_vertex_cover.h
+# 	$(CC) $(CFLAGS) -c ./serial_vertex_cover.cpp -o $(OBJ)/serial_vertex_cover.o
 
-$(OBJ)/parallel_vertex_cover.o : ./parallel_vertex_cover.cpp ./parallel_vertex_cover.h
-	$(CC) $(CFLAGS) -c ./parallel_vertex_cover.cpp -o $(OBJ)/parallel_vertex_cover.o
+# $(OBJ)/parallel_vertex_cover.o : ./parallel_vertex_cover.cpp ./parallel_vertex_cover.h
+# 	$(CC) $(CFLAGS) -c ./parallel_vertex_cover.cpp -o $(OBJ)/parallel_vertex_cover.o
 
 clean:
 	rm -f $(BIN)/*
