still have issue with openmp

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,12 @@
 CC = g++ 
 SIMPLE = vanila
 SERIAL = serial
-OPENMAP = OpenMp
+OPENMAP = openmp
 BIN = bin
 OBJ = obj
-CFLAGS = -std=c++11 -o3 
+CFLAGS = -std=c++11 -o3 -fopenmp
 
-all: $(SIMPLE) $(SERIAL) 
+all: $(SIMPLE) $(SERIAL) $(OPENMAP)
 
 $(SIMPLE) : $(OBJ)/vanila_vertex_cover.o 
 	$(CC) $(CFLAGS) $(OBJ)/vanila_vertex_cover.o -o $(BIN)/$(SIMPLE)
@@ -14,8 +14,8 @@ $(SIMPLE) : $(OBJ)/vanila_vertex_cover.o
 $(SERIAL) : $(OBJ)/serial_vertex_cover.o 
 	$(CC) $(CFLAGS) $(OBJ)/serial_vertex_cover.o -o $(BIN)/$(SERIAL)
 
-# $(OPENMAP) : $(OBJ)/parallel_vertex_cover.o 
-# 	$(CC) $(CFLAGS) $(OBJ)/parallel_vertex_cover.o -o $(BIN)/$(OPENMAP)
+$(OPENMAP) : $(OBJ)/parallel_vertex_cover.o 
+	$(CC) $(CFLAGS) $(OBJ)/parallel_vertex_cover.o -o $(BIN)/$(OPENMAP)
 
 $(OBJ)/vanila_vertex_cover.o : ./vanila_vertex_cover.cpp ./vanila_vertex_cover.h
 	$(CC) $(CFLAGS) -c ./vanila_vertex_cover.cpp -o $(OBJ)/vanila_vertex_cover.o
@@ -23,8 +23,8 @@ $(OBJ)/vanila_vertex_cover.o : ./vanila_vertex_cover.cpp ./vanila_vertex_cover.h
 $(OBJ)/serial_vertex_cover.o : ./serial_vertex_cover.cpp ./serial_vertex_cover.h
 	$(CC) $(CFLAGS) -c ./serial_vertex_cover.cpp -o $(OBJ)/serial_vertex_cover.o
 
-# $(OBJ)/parallel_vertex_cover.o : ./parallel_vertex_cover.cpp ./parallel_vertex_cover.h
-# 	$(CC) $(CFLAGS) -c ./parallel_vertex_cover.cpp -o $(OBJ)/parallel_vertex_cover.o
+$(OBJ)/parallel_vertex_cover.o : ./parallel_vertex_cover.cpp ./parallel_vertex_cover.h
+	$(CC) $(CFLAGS) -c ./parallel_vertex_cover.cpp -o $(OBJ)/parallel_vertex_cover.o
 
 clean:
 	rm -f $(BIN)/*
