--- a/src/Makefile
+++ b/src/Makefile
@@ -2,11 +2,12 @@ CC = g++
 SIMPLE = vanila
 SERIAL = serial
 OPENMAP = openmp
+MPI = mpi
 BIN = bin
 OBJ = obj
 CFLAGS = -std=c++11 -o3 -fopenmp
 
-all: $(SIMPLE) $(SERIAL) $(OPENMAP)
+all: $(SIMPLE) $(SERIAL) $(OPENMAP) $(MPI)
 
 $(SIMPLE) : $(OBJ)/vanila_vertex_cover.o 
 	$(CC) $(CFLAGS) $(OBJ)/vanila_vertex_cover.o -o $(BIN)/$(SIMPLE)
@@ -17,6 +18,9 @@ $(SERIAL) : $(OBJ)/serial_vertex_cover.o
 $(OPENMAP) : $(OBJ)/parallel_vertex_cover.o 
 	$(CC) $(CFLAGS) $(OBJ)/parallel_vertex_cover.o -o $(BIN)/$(OPENMAP)
 
+$(MPI) : $(OBJ)/MPI_vertex_cover.o 
+	$(CC) $(CFLAGS) $(OBJ)/MPI_vertex_cover.o -o $(BIN)/$(MPI)
+
 $(OBJ)/vanila_vertex_cover.o : ./vanila_vertex_cover.cpp ./vanila_vertex_cover.h
 	$(CC) $(CFLAGS) -c ./vanila_vertex_cover.cpp -o $(OBJ)/vanila_vertex_cover.o
 
@@ -25,6 +29,9 @@ $(OBJ)/serial_vertex_cover.o : ./serial_vertex_cover.cpp ./serial_vertex_cover.h
 
 $(OBJ)/parallel_vertex_cover.o : ./parallel_vertex_cover.cpp ./parallel_vertex_cover.h
 	$(CC) $(CFLAGS) -c ./parallel_vertex_cover.cpp -o $(OBJ)/parallel_vertex_cover.o
+
+$(OBJ)/MPI_vertex_cover.o : ./MPI_vertex_cover.cpp ./MPI_vertex_cover.h
+	$(CC) $(CFLAGS) -c ./MPI_vertex_cover.cpp -o $(OBJ)/MPI_vertex_cover.o
 
 clean:
 	rm -f $(BIN)/*
