--- a/src/Makefile
+++ b/src/Makefile
@@ -6,6 +6,8 @@ MPI = mpi
 BIN = bin
 OBJ = obj
 CFLAGS = -std=c++11 -o3 -fopenmp
+CXX = mpic++
+CXXFLAGS = -I. -O3
 
 all: $(SIMPLE) $(SERIAL) $(OPENMAP) $(MPI)
 
@@ -19,7 +21,7 @@ $(OPENMAP) : $(OBJ)/parallel_vertex_cover.o
 	$(CC) $(CFLAGS) $(OBJ)/parallel_vertex_cover.o -o $(BIN)/$(OPENMAP)
 
 $(MPI) : $(OBJ)/MPI_vertex_cover.o 
-	$(CC) $(CFLAGS) $(OBJ)/MPI_vertex_cover.o -o $(BIN)/$(MPI)
+	$(CXX) $(CXXFLAGS) $(OBJ)/MPI_vertex_cover.o -o $(BIN)/$(MPI)
 
 $(OBJ)/vanila_vertex_cover.o : ./vanila_vertex_cover.cpp ./vanila_vertex_cover.h
 	$(CC) $(CFLAGS) -c ./vanila_vertex_cover.cpp -o $(OBJ)/vanila_vertex_cover.o
@@ -31,7 +33,7 @@ $(OBJ)/parallel_vertex_cover.o : ./parallel_vertex_cover.cpp ./parallel_vertex_c
 	$(CC) $(CFLAGS) -c ./parallel_vertex_cover.cpp -o $(OBJ)/parallel_vertex_cover.o
 
 $(OBJ)/MPI_vertex_cover.o : ./MPI_vertex_cover.cpp ./MPI_vertex_cover.h
-	$(CC) $(CFLAGS) -c ./MPI_vertex_cover.cpp -o $(OBJ)/MPI_vertex_cover.o
+	$(CXX) $< $(CXXFLAGS) -c -o $@o
 
 clean:
 	rm -f $(BIN)/*
