fix makefile bug

--- a/src/Makefile
+++ b/src/Makefile
@@ -20,8 +20,8 @@ $(SERIAL) : $(OBJ)/serial_vertex_cover.o
 $(OPENMAP) : $(OBJ)/parallel_vertex_cover.o 
 	$(CC) $(CFLAGS) $(OBJ)/parallel_vertex_cover.o -o $(BIN)/$(OPENMAP)
 
-$(MPI) : $(OBJ)/MPI_vertex_cover.o 
-	$(CXX) $(CXXFLAGS) $(OBJ)/MPI_vertex_cover.o -o $(BIN)/$(MPI) 
+$(MPI) : 
+	$(CXX) $(CFLAGS) -o $(BIN)/$(MPI) ./MPI_vertex_cover.cpp
 
 $(OBJ)/vanila_vertex_cover.o : ./vanila_vertex_cover.cpp ./vanila_vertex_cover.h
 	$(CC) $(CFLAGS) -c ./vanila_vertex_cover.cpp -o $(OBJ)/vanila_vertex_cover.o
@@ -32,8 +32,6 @@ $(OBJ)/serial_vertex_cover.o : ./serial_vertex_cover.cpp ./serial_vertex_cover.h
 $(OBJ)/parallel_vertex_cover.o : ./parallel_vertex_cover.cpp ./parallel_vertex_cover.h
 	$(CC) $(CFLAGS) -c ./parallel_vertex_cover.cpp -o $(OBJ)/parallel_vertex_cover.o
 
-$(OBJ)/MPI_vertex_cover.o : ./MPI_vertex_cover.cpp ./MPI_vertex_cover.h 
-	$(CXX) $(CXXFLAGS) -c ./MPI_vertex_cover.cpp -o $(OBJ)/MPI_vertex_cover.o 
 
 clean:
 	rm -f $(BIN)/*
